[project]
name = "usa-agriculture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf2>=2.8.5",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "pydeck>=0.8.0",
    "requests>=2.32.0",
    "streamlit>=1.41.0",
    "streamlit-lottie>=0.0.5",
]
